[package]
name = "mii-memory"
version = "0.1.0"
edition = "2024"
authors = ["nipah~✰! <mii_nipah@pm.me>"]
description = "A local-first memory store for AI agents with CLI, MCP server, and web explorer interfaces."
license = "BSD-3-Clause"
repository = "https://github.com/mii-nipah/mii-memory"
readme = "README.md"
build = "build.rs"
exclude = ["weights/*"]

[features]
default = ["embedded"]
embedded = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tract-onnx = "0.23.0-dev.5"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3.12"
